2009-04-08  Vincent Untz  <vuntz@gnome.org>

	* gnome-session/gsm-xsmp-client.c: (save_yourself_done_callback): only
	call SmsSaveComplete() if we are still in a SaveYourself state. My
	previous change about this didn't take into account the case where the
	logout is cancelled, in which case SmsSaveComplete() shouldn't be
	called.

2009-04-05  Matthias Clasen  <mclasen@redhat.com>

	* gnome-session/gs-idle-monitor.c (handle_alarm_notify_event): Ignore
	XSyncAlarmDestroyed events, and don't spam .xsession-errors for these.

2009-03-25  Vincent Untz  <vuntz@gnome.org>

	* gnome-session/gsm-manager.c: (end_phase): put the call that
	potentially saves the session here, at the end of END_SESSION instead
	of many random places
	(do_phase_end_session),
	(do_phase_end_session_part_2), (on_client_end_session_response): remove
	calls to maybe_save_session()

2009-03-25  Vincent Untz  <vuntz@gnome.org>

	Remove the END_SESSION_LAST phase since it was considered to break the
	design. Instead, just use a second step in the END_SESSION phase.

	* gnome-session/gsm-manager.[ch]: (phase_num_to_name): remove
	END_SESSION_LAST phase
	(end_phase): always clean up next_query_clients, and remove
	END_SESSION_LAST phase.
	(on_phase_timeout): remove END_SESSION_LAST phase
	(_client_end_session): change the function signature so that we can
	merge this old function and _client_end_session_last
	(_client_end_session_last): killed
	(_client_end_session_helper): new, helper used for
	do_phase_end_session() since _client_end_session() cannot be directly
	used anymore
	(do_phase_end_session): use _client_end_session_helper(), and save
	session if there's nothing to do
	(do_phase_end_session_last): renamed to...
	(do_phase_end_session_part_2): ... this. Don't reset the phase timeout
	since we're still in the END_SESSION phase. Clean up next_query_clients
	after having used it.
	(start_phase): always clean up next_query_clients, remove
	END_SESSION_LAST phase